--- a/src/administration/client/templates/client/include/dashboard_navbar.html
+++ b/src/administration/client/templates/client/include/dashboard_navbar.html
@@ -20,7 +20,7 @@
             <li class="nav-item"><a class="nav-link" href="{% url 'client:wishlist' %}">My Wishlist</a></li>
             <li class="nav-item"><a class="nav-link">My Cart</a></li>
             <li class="nav-item"><a class="nav-link">Payments</a></li>
-            <li class="nav-item"><a class="nav-link" href="">Log Out</a></li>
+            <li class="nav-item"><a  class="nav-link" href="{% url 'account_logout' %}">Log Out</a></li>
         </ul>
     </div>
 </div>
