--- a/src/website/templates/website/cart.html
+++ b/src/website/templates/website/cart.html
@@ -2,183 +2,129 @@
 {% load static %}
 {% block content %}
 <div class="breadcrumb-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="page-title">
-                        <h2>cart</h2>
-                    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="page-title">
+                    <h2>cart</h2>
                 </div>
-                <div class="col-sm-6">
-                    <nav aria-label="breadcrumb" class="theme-breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active">cart</li>
-                        </ol>
-                    </nav>
-                </div>
+            </div>
+            <div class="col-sm-6">
+                <nav aria-label="breadcrumb" class="theme-breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                        <li class="breadcrumb-item active">cart</li>
+                    </ol>
+                </nav>
             </div>
         </div>
     </div>
+</div>
+{% if cart %}
 <section class="cart-section section-b-space">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="cart_counter">
-                        <div class="countdownholder">
-                            Your cart will be expired in<span id="timer">13:53</span> minutes!
-                        </div>
-                        <a href="checkout.html" class="cart_checkout btn btn-solid btn-xs">check out</a>
-                    </div>
-                </div>
-                <div class="col-sm-12 table-responsive-xs">
-                    <table class="table cart-table">
-                        <thead>
-                            <tr class="table-head">
-                                <th scope="col">image</th>
-                                <th scope="col">product name</th>
-                                <th scope="col">price</th>
-                                <th scope="col">quantity</th>
-                                <th scope="col">action</th>
-                                <th scope="col">total</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <a href="#"><img src="{% static 'website/images/pro3/2.jpg' %}" alt=""></a>
-                                </td>
-                                <td><a href="#">book</a>
-                                    <div class="mobile-cart-content row">
-                                        <div class="col">
-                                            <div class="qty-box">
-                                                <div class="input-group">
-                                                    <input type="text" name="quantity" class="form-control input-number" value="1">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col">
-                                            <h2 class="td-color">$63.00</h2>
-                                        </div>
-                                        <div class="col">
-                                            <h2 class="td-color"><a href="#" class="icon"><i class="ti-close"></i></a>
-                                            </h2>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td>
-                                    <h2>$63.00</h2>
-                                </td>
-                                <td>
+    <div class="container">
+        <div class="row">
+
+            <div class="col-sm-12 table-responsive-xs">
+                <table class="table cart-table">
+                    <thead>
+                    <tr class="table-head">
+                        <th scope="col">image</th>
+                        <th scope="col">product name</th>
+                        <th scope="col">price</th>
+                        <th scope="col">quantity</th>
+                        <th scope="col">action</th>
+                        <th scope="col">total</th>
+                    </tr>
+                    </thead>
+                    {% for cart in cart %}
+                    <tbody>
+                    <tr>
+                        <td>
+                            <a href="#"><img alt="" src="{{cart.product.thumbnail_image.url}}"></a>
+                        </td>
+                        <td><a href="#">{{cart.product.name}}</a>
+
+                            <div class="mobile-cart-content row">
+                                <div class="col">
                                     <div class="qty-box">
                                         <div class="input-group">
-                                            <input type="number" name="quantity" class="form-control input-number" value="1">
+                                            <input class="form-control input-number" name="quantity" type="text"
+                                                   value="{{cart.quantity}}">
                                         </div>
                                     </div>
-                                </td>
-                                <td><a href="#" class="icon"><i class="ti-close"></i></a></td>
-                                <td>
-                                    <h2 class="td-color">$4539.00</h2>
-                                </td>
-                            </tr>
-                        </tbody>
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <a href="#"><img src="{% static 'website/images/pro3/35.jpg' %}" alt=""></a>
-                                </td>
-                                <td><a href="#">book</a>
-                                    <div class="mobile-cart-content row">
-                                        <div class="col">
-                                            <div class="qty-box">
-                                                <div class="input-group">
-                                                    <input type="number" name="quantity" class="form-control input-number" value="1">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col">
-                                            <h2 class="td-color">$63.00</h2>
-                                        </div>
-                                        <div class="col">
-                                            <h2 class="td-color"><a href="#" class="icon"><i class="ti-close"></i></a>
-                                            </h2>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td>
-                                    <h2>$63.00</h2>
-                                </td>
-                                <td>
-                                    <div class="qty-box">
-                                        <div class="input-group">
-                                            <input type="number" name="quantity" class="form-control input-number" value="1">
-                                        </div>
-                                    </div>
-                                </td>
-                                <td><a href="#" class="icon"><i class="ti-close"></i></a></td>
-                                <td>
-                                    <h2 class="td-color">$4539.00</h2>
-                                </td>
-                            </tr>
-                        </tbody>
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <a href="#"><img src="{% static 'website/images/pro3/33.jpg' %}" alt=""></a>
-                                </td>
-                                <td><a href="#">book</a>
-                                    <div class="mobile-cart-content row">
-                                        <div class="col">
-                                            <div class="qty-box">
-                                                <div class="input-group">
-                                                    <input type="number" name="quantity" class="form-control input-number" value="1">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col">
-                                            <h2 class="td-color">$63.00</h2>
-                                        </div>
-                                        <div class="col">
-                                            <h2 class="td-color"><a href="#" class="icon"><i class="ti-close"></i></a>
-                                            </h2>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td>
-                                    <h2>$63.00</h2>
-                                </td>
-                                <td>
-                                    <div class="qty-box">
-                                        <div class="input-group">
-                                            <input type="number" name="quantity" class="form-control input-number" value="1">
-                                        </div>
-                                    </div>
-                                </td>
-                                <td><a href="#" class="icon"><i class="ti-close"></i></a></td>
-                                <td>
-                                    <h2 class="td-color">$4539.00</h2>
-                                </td>
-                            </tr>
-                        </tbody>
+                                </div>
+                                <div class="col">
+                                    <h2 class="td-color">${{cart.product_version.price}}</h2>
+                                </div>
+                                <div class="col">
+                                    <h2 class="td-color"><a class="icon" href="#"><i class="ti-close"></i></a>
+                                    </h2>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <h3>${{cart.product_version.price}}</h3>
+                        </td>
+                        <td>
+                          <div class="col">
+                                    <h3 class="">{{cart.quantity}}</h3>
+                                </div>
+                        </td>
+                        <td>
+                            <a class="icon" href="{% url 'website:increment' %}?product_id={{cart.product_id}}&&version_id={{cart.product_version_id}}"><i class="ti-arrow-up"></i></a>&nbsp;&nbsp;
+                            <a class="icon" href="{% url 'website:decrement' %}?product_id={{cart.product_id}}&&version_id={{cart.product_version_id}}"><i class="ti-arrow-down"></i></a>&nbsp;&nbsp;
+                            <a class="icon" href="{% url 'website:remove-cart' %}?product_id={{cart.product_id}}&&version_id={{cart.product_version_id}}"><i class="ti-close"></i></a>
+                        </td>
+                        <td>
+                            <h3 class="td-color">{{cart.get_item_price}}</h3>
+                        </td>
+                    </tr>
+                    </tbody>
+                    {% endfor %}
+                </table>
+                <div class="table-responsive-md">
+                    <table class="table cart-table ">
+                        <tfoot>
+                        <tr>
+                            <td class="text-danger">total price :</td>
+                            <td>
+                                <h2>${{total_amount}}</h2>
+                            </td>
+                        </tr>
+                        </tfoot>
                     </table>
-                    <div class="table-responsive-md">
-                        <table class="table cart-table ">
-                            <tfoot>
-                                <tr>
-                                    <td>total price :</td>
-                                    <td>
-                                        <h2>$6935.00</h2>
-                                    </td>
-                                </tr>
-                            </tfoot>
-                        </table>
-                    </div>
                 </div>
-            </div>
-            <div class="row cart-buttons">
-                <div class="col-6"><a href="#" class="btn btn-solid">continue shopping</a></div>
-                <div class="col-6"><a href="#" class="btn btn-solid">check out</a></div>
             </div>
         </div>
-    </section>
+        <div class="row cart-buttons">
+            <div class="col-6"><a class="btn btn-outline-danger" href="#"><i class="ti-arrow-left"></i>&nbsp; continue
+                shopping</a></div>
+            <div class="col-6"><a class="btn btn-danger" href="#">check out</a></div>
+        </div>
+    </div>
+</section>
+{% else %}
+<h3 class="text-center mt-4 text-danger">Cart is Empty</h3>
+<div class="row justify-content-center mt-4 mb-4 ">
+            <div class="col-12 text-center">
+                <a class="btn btn-outline-danger" href="{% url 'website:home' %}"><i class="ti-arrow-left"></i>&nbsp; continue
+                shopping</a>
+            </div>
+        </div>
+{% endif %}
+<script>
+const quantityInput = document.getElementById("quantity");
+const updateBtn = document.getElementById("updateBtn");
+
+quantityInput.addEventListener("input", () => {
+  if (quantityInput.value != "1") {
+    updateBtn.disabled = false;
+  } else {
+    updateBtn.disabled = true;
+  }
+});
+
+
+</script>
 {% endblock content %}
