Feat : Order Funtionalitiy Added

--- a/src/website/templates/website/cart.html
+++ b/src/website/templates/website/cart.html
@@ -100,7 +100,7 @@
         <div class="row cart-buttons">
             <div class="col-6"><a class="btn btn-outline-danger" href="#"><i class="ti-arrow-left"></i>&nbsp; continue
                 shopping</a></div>
-            <div class="col-6"><a class="btn btn-danger" href="#">check out</a></div>
+            <div class="col-6"><a class="btn btn-danger" href="{% url 'website:order' %}">check out</a></div>
         </div>
     </div>
 </section>
