--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,15 +1,18 @@
-{% extends 'core/auth_base.html' %}
+{% extends 'website/base.html' %}
 {% load static %}
+
 {% load i18n %}
 {% load account %}
+{% load static %}
 {% load crispy_forms_tags %}
 
-{% block base_title %}{% trans "Password Reset" %}{% endblock %}
+{% block title %}{% trans "Password Reset" %}{% endblock %}
 
-{% block auth_content %}
+{% block base_top_nav %}{% endblock %}
+{% block content %}
 
     <div class="my-4 row justify-content-center">
-        <div class="col-sm-12">
+        <div class="col-11 col-sm-8">
             <div class="text-center">
                 <div>
                     {% if user.is_authenticated %}
@@ -17,31 +20,26 @@
                     {% endif %}
                 </div>
             </div>
+            <hr class="border border-danger">
             <div class="card">
                 <div class="card-header text-center">
-                    <p class="card-title mb-0">{% trans "Password Reset" %}</p>
+                    <p class="card-title m-0">{% trans "Password Reset" %}</p>
+
                 </div>
-                <div class="card-body">
-                    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+                <div class="card-body theme-card">
+                    <form method="POST" action="{% url 'account_reset_password' %}" class="theme-form">
                         {% csrf_token %}
+                        <div class="form-group">
                         {{ form|crispy }}
-                        <input type="submit" class="btn btn-primary btn-block mt-3"
-                               value="{% trans 'Reset My Password' %}"/>
+
+                        </div>
+                        <input type="submit" class="btn btn-solid" value="{% trans 'Reset My Password' %}"/>
                     </form>
 
                     <p class="mt-2">Please contact us if you have any trouble resetting your
                         password, forgotten your password? Enter your e-mail address above, and we'll send you an e-mail
                         allowing you to reset it.</p>
                 </div>
-
-            </div>
-
-            <div class="mt-3">
-                <p class="mb-0 pl-2">
-                    <b>
-                        <a href="{% url 'account:cross-auth' %}"><i class="fa fa-arrow-left"></i> Back to Home</a>
-                    </b>
-                </p>
             </div>
         </div>
     </div>
