--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -1,20 +1,26 @@
-{% extends 'core/auth_base.html' %}
-{% load static %}
+{% extends 'base.html' %}
+
 {% load i18n %}
 {% load account %}
+{% load static %}
 {% load crispy_forms_tags %}
 
-{% block base_title %}{% trans "Password Reset" %}{% endblock %}
+{% block title %}{% trans "Password Reset" %}{% endblock %}
 
-{% block auth_content %}
+{% block base_top_nav %}{% endblock %}
+{% block dont_include_details %}
+
+   {% include 'messages.html' %}
 
     <div class="my-4 row justify-content-center">
-        <div class="col-sm-12">
+        <div class="col-11 col-sm-8">
             <div class="text-center">
                 {% if user.is_authenticated %}
                     {% include "account/snippets/already_logged_in.html" %}
                 {% endif %}
             </div>
+
+            <hr class="border border-danger">
 
             <div class="card">
                 <div class="card-header text-center">
@@ -24,19 +30,9 @@
                 <div class="card-body">
 
                     <p>{% blocktrans %}We have e-mailed you. Please contact us if you do not receive it within a
-                        few minutes.{% endblocktrans %}
-                    </p>
+                        few minutes.{% endblocktrans %}</p>
                 </div>
             </div>
-
-            <div class="mt-3">
-                <p class="mb-0 pl-2">
-                    <b>
-                        <a href="{% url 'account:cross-auth' %}" ><i class="fa fa-arrow-left"></i> Back to Home</a>
-                    </b>
-                </p>
-            </div>
-
         </div>
     </div>
 
