--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,21 +1,28 @@
-{% extends 'core/auth_base.html' %}
-{% load static %}
+
+
+{% extends 'base.html' %}
+
 {% load i18n %}
 {% load account %}
+{% load static %}
 {% load crispy_forms_tags %}
 
-{% block base_title %}{% trans "Change Password" %}{% endblock %}
+{% block title %}{% trans "Change Password" %}{% endblock %}
 
-{% block auth_content %}
+{% block base_top_nav %}{% endblock %}
+{% block dont_include_details %}
 
+   {% include 'messages.html' %}
 
     <div class="my-4 row justify-content-center">
-        <div class="col-sm-12">
+        <div class="col-11 col-sm-8">
             <div class="text-center">
                 {% if user.is_authenticated %}
                     {% include "account/snippets/already_logged_in.html" %}
                 {% endif %}
             </div>
+
+            <hr class="border border-danger">
 
             <div class="card">
                 <div class="card-header text-center">
@@ -23,6 +30,9 @@
 
                 </div>
                 <div class="card-body">
+
+                    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}
+                        {% trans "Change Password" %}{% endif %}</h1>
 
                     {% if token_fail %}
                         {% url 'account_reset_password' as passwd_reset_url %}
@@ -45,12 +55,4 @@
         </div>
     </div>
 
-{% endblock %}
-
-{% block base_external_scripts %}
-    <script>
-        $(document).ready(function () {
-            $('input').addClass('my-2');
-        })
-    </script>
 {% endblock %}
