--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -1,26 +1,34 @@
-{% extends 'core/auth_base.html' %}
-{% load static %}
+{% extends 'base.html' %}
+
 {% load i18n %}
 {% load account %}
+{% load static %}
 {% load crispy_forms_tags %}
 
-{% block base_title %}{% trans "Set password" %}{% endblock %}
+{% block title %}{% trans "Set password" %}{% endblock %}
 
-{% block auth_content %}
+{% block base_top_nav %}{% endblock %}
+{% block dont_include_details %}
+
+   {% include 'messages.html' %}
 
     <div class="my-4 row justify-content-center">
-        <div class="col-sm-8">
+        <div class="col-11 col-sm-8">
             <div class="text-center">
                 {% if user.is_authenticated %}
                     {% include "account/snippets/already_logged_in.html" %}
                 {% endif %}
             </div>
 
+            <hr class="border border-danger">
+
             <div class="card">
                 <div class="card-header text-center">
                     <p class="card-title m-0">{% trans "Set Password" %}</p>
+
                 </div>
                 <div class="card-body">
+
                     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
                         {% csrf_token %}
                         {{ form | crispy }}
