--- a/templates/account/verified_email_required.html
+++ b/templates/account/verified_email_required.html
@@ -1,19 +1,24 @@
-{% extends 'core/auth_base.html' %}
+{% extends 'base.html' %}
 
 {% load i18n %}
 {% load static %}
 
-{% block base_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
+{% block title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
-{% block auth_content %}
+{% block base_top_nav %}{% endblock %}
+{% block dont_include_details %}
+
+   {% include 'messages.html' %}
 
     <div class="my-4 row justify-content-center">
-        <div class="col-sm-12">
+        <div class="col-11 col-sm-8">
             <div class="text-center">
                 {% if user.is_authenticated %}
                     {% include "account/snippets/already_logged_in.html" %}
                 {% endif %}
             </div>
+
+            <hr class="border border-danger">
 
             <div class="card">
                 <div class="card-header text-center">
