Feat:Wishlist Added

--- a/src/website/templates/website/product_detail.html
+++ b/src/website/templates/website/product_detail.html
@@ -112,7 +112,7 @@
 
                         <a
                                 class="btn btn-solid"
-                                href="#"><i
+                                href="{% url 'client:wishlist-create' object.id %}"><i
                                 aria-hidden="true" class="fa fa-bookmark fz-16 me-2"></i>wishlist</a>
                     </div>
 
