--- a/src/administration/client/templates/client/wishlist_list.html
+++ b/src/administration/client/templates/client/wishlist_list.html
@@ -66,7 +66,7 @@
                                                                 <span class="theme-color fs-6">{{object.product.artist}}</span>
                                                             </td>
                                                             <td>
-                                                                <a href="" ><i class="fa fa-eye"></i></a>&nbsp;&nbsp;
+                                                                <a href="{% url 'website:product-detail' object.product.slug %}" ><i class="fa fa-eye"></i></a>&nbsp;&nbsp;
                                                                 <a href="{% url 'client:wishlist-delete' object.product.id %}" class="btn "><i class="fa fa-trash"></i></a>&nbsp;&nbsp;
                                                             </td>
                                                         </tr>
